# wayclipper

./: .clang-format  .clangd  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  Makefile  README.md  meson.build  meson.options
schemas/: com.github.64bitman.clipstuff.gschema.xml  meson.build
src/: clippor-entry.c  clippor-instance.c  config.c  ext-data-control-unstable-v1.c  main.c  meson.build  types.c  virtual-keyboard-unstable-v1.c  wlr-data-control-unstable-v1.c
src/include/: clippor-entry.h  clippor-instance.h  config.h  ext-data-control-unstable-v1.h  types.h  util.h  virtual-keyboard-unstable-v1.h  wlr-data-control-unstable-v1.h
src/wayland/: meson.build  wayland-connection.c
src/wayland/include/: wayland-connection.h
src/wayland/protocols/: meson.build
src/wl_protocols/: meson.build
